<resources>
    <string name="app_name">权威2</string>
    <string name="ctime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_lable">Title</string>
    <string name="crime_detailas_lable">Details</string>
    <string name="crime_solved_lable">Solved</string>
    <string name="date_picker_title">Date of crime:</string>


    <string name="new_crime">New Crime</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    
    <string name="crime_report">%1s!
    The crime was discovered on %2$s. #$3s, and %4$s
    </string>
    
    <string name="crime_report_solved">The case id solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is on suspect</string>
    <string name="crime_report_suspet">The suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>

    
    
    
    
    <!--<stirng name="show_subtitle">Show Subtitle</stirng>-->
    <string name="show_subtitle">show subtitle</string>


    <string name="hide_subtitle">Hide subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
</resources>
